# spotgenre

./: .gitignore  Cargo.toml  Justfile  README.md  flake.nix
src/: main.rs
src/spotify/: auth.rs  mod.rs  playlist.rs  user.rs
